# numba-rvsdg

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  a.py  byteflow2.py  chk.py  example.py  makefile  mypy.ini  numba_rvsdg-demo.ipynb  pyproject.toml  scc.py  simulator.py  test_byteflow2.py  test_fig3.py  test_simulate.py  testfig4.py  testing.py
.github/workflows/: release.yml  test.yml
conda-recipes/: bld.bat  build.sh  meta.yaml
docs/source/: conf.py  contributing.rst  faqs.rst  glossary.rst  index.rst  release_notes.rst
docs/source/reference/: datastructures.rst  index.rst  rendering.rst  transformations.rst
docs/source/tutorials/: getting_started.rst
numba_rvsdg/: __init__.py  mock_asm.py
numba_rvsdg/core/: datastructures.py  transformations.py  utils.py
numba_rvsdg/networkx_vendored/: scc.py
numba_rvsdg/rendering/: rendering.py
numba_rvsdg/tests/: mock_asm.py  simulator.py  test_ast_transforms.py  test_block_map.py  test_blockmap.py  test_byteflow.py  test_fig3.py  test_fig4.py  test_figures.py  test_mock_asm.py  test_rendering.py  test_scc.py  test_scfg.py  test_simulate.py  test_transforms.py  test_utils.py  testing.py
numba_rvsdg/utils/: map_utils.py  rendering.py  simulator.py
numba_scfg/: __init__.py
numba_scfg/core/: transformations.py
numba_scfg/rendering/: rendering.py
numba_scfg/tests/: mock_asm.py  simulator.py  test_ast_transforms.py  test_byteflow.py  test_figures.py  test_mock_asm.py  test_rendering.py  test_scc.py  test_scfg.py  test_simulate.py  test_transforms.py  test_utils.py
(+21 files in other folders)
